fix alignment for small screens

--- a/poster/css/styles.css
+++ b/poster/css/styles.css
@@ -224,9 +224,17 @@ h6 {
 }
 
 @media screen and (max-width: 767px) {
-.conclusion-check {
-    text-align: center;
-}
+    .conclusion-check {
+        text-align: center;
+    }
+
+    .conclusion-check h3 {
+        margin-left: -9px;
+    }
+
+    .conclusion-check h1 {
+        margin-left: -16px;
+    }
 }
 
 #map-wrapper {
